--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>تسجيل الدخول / استرجاع الكود</title>
+<title>تسجيل الدخول - منصة التحدي</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <style>
 :root{
   --blue:#007bff;
-  --success:#28a745;
-  --danger:#dc3545;
   --card:#fff;
 }
 body{
@@ -18,29 +16,24 @@ body{
   direction:rtl;
   background:linear-gradient(180deg,#f3f8ff,#ffffff);
   margin:0;
-  min-height:100vh;
   display:flex;
   align-items:center;
   justify-content:center;
+  height:100vh;
   padding:20px;
-}
-.container{
-  position:relative;
-  width:100%;
-  max-width:420px;
-  overflow:hidden;
 }
 .box{
   width:100%;
+  max-width:420px;
   background:var(--card);
   border-radius:14px;
   box-shadow:0 12px 28px rgba(0,0,0,0.08);
   padding:30px;
-  position:absolute;
-  top:0;
-  left:0;
+  text-align:center;
+  opacity:0;
+  transform:translateY(40px);
 }
-h2{margin-bottom:10px;text-align:center}
+h2{margin-bottom:10px}
 .input{
   margin:16px 0;
   display:flex;
@@ -67,138 +60,46 @@ h2{margin-bottom:10px;text-align:center}
   cursor:pointer;
   transition:0.3s;
   width:100%;
-  margin-top:10px;
 }
 .btn:hover{transform:translateY(-2px);box-shadow:0 6px 12px rgba(0,0,0,0.1)}
-.forgot,.back{
+.forgot{
   margin-top:14px;
   font-size:14px;
-  text-align:center;
 }
-.forgot a,.back a{
+.forgot a{
   color:var(--blue);
   text-decoration:underline;
   cursor:pointer;
 }
-/* شاشة استرجاع */
-.result{margin-top:16px;min-height:120px;display:flex;align-items:center;justify-content:center;}
-.card{padding:18px;border-radius:12px;background:linear-gradient(180deg,#fff,#f7fbff);box-shadow:0 12px 26px rgba(0,0,0,0.06);text-align:center;width:100%;max-width:520px;}
-.codeBox{margin-top:12px;font-size:26px;font-weight:800;letter-spacing:6px;padding:12px 18px;border-radius:10px;display:inline-block;background:linear-gradient(90deg,#fff,#f8fffb);box-shadow:0 6px 18px rgba(0,0,0,0.06);}
-.chars{display:inline-block;opacity:0}
-.chars.visible{opacity:1;animation:fadeUp .6s ease forwards}
-@keyframes fadeUp{from{transform:translateY(8px);opacity:0}to{transform:translateY(0);opacity:1}}
-.err{color:var(--danger);font-weight:700;animation:shake .5s}
-@keyframes shake{0%,100%{transform:translateX(0)}20%{transform:translateX(-8px)}40%{transform:translateX(8px)}60%{transform:translateX(-6px)}80%{transform:translateX(6px)}}
-.copyBtn{margin-top:12px;padding:10px 12px;border-radius:8px;border:0;cursor:pointer;font-weight:700}
-.copyBtn.success{background:var(--success);color:#fff}
-.copyBtn.fail{background:#f0f0f0;color:#333}
 </style>
 </head>
 <body>
-<div class="container">
-  <!-- شاشة تسجيل الدخول -->
-  <div class="box" id="loginScreen">
-    <h2>تسجيل الدخول</h2>
-    <div class="input">
-      <input type="text" id="studentCode" placeholder="أدخل الكود هنا">
-    </div>
-    <button class="btn" id="loginBtn">تسجيل الدخول</button>
-    <div class="forgot">
-      <a id="goForgot">نسيت الكود؟</a>
-    </div>
+<div class="box">
+  <h2>تسجيل الدخول</h2>
+  <p>أدخل كود الطالب للمتابعة</p>
+  <div class="input">
+    <input type="text" id="studentCode" placeholder="أدخل الكود هنا">
   </div>
-
-  <!-- شاشة استرجاع الكود -->
-  <div class="box" id="forgotScreen" style="left:100%;">
-    <h2>نسيت الكود الخاص بي</h2>
-    <div class="input"><input id="parent" placeholder="رقم ولي الأمر" inputmode="numeric" /></div>
-    <div class="input"><input id="studentName" placeholder="اسم الطالب" /></div>
-    <button class="btn btn-primary" id="searchBtn">استرجاع الكود</button>
-    <button class="btn btn-secondary" id="clearBtn">مسح الحقول</button>
-    <div class="result" id="resultArea"><div style="text-align:center;color:#666">النتيجة ستظهر هنا بعد البحث</div></div>
-    <div class="back"><a id="backLogin">◀ العودة إلى تسجيل الدخول</a></div>
+  <button class="btn" id="loginBtn">تسجيل الدخول</button>
+  <div class="forgot">
+    <a href="forgot.html">نسيت الكود؟</a>
   </div>
 </div>
 
 <script>
-const loginScreen=document.getElementById('loginScreen');
-const forgotScreen=document.getElementById('forgotScreen');
-
-/* GSAP animation عند التحميل */
-gsap.from([loginScreen.querySelector('h2'),loginScreen.querySelector('.input'),loginScreen.querySelector('.btn'),loginScreen.querySelector('.forgot')],{
-  duration:0.8,opacity:0,y:30,stagger:0.15
+window.addEventListener('DOMContentLoaded',()=>{
+  gsap.to('.box',{duration:0.8,opacity:1,y:0,ease:"power3.out"});
+  gsap.from('h2',{duration:0.8,y:-30,opacity:0,delay:0.2});
+  gsap.from('.input',{duration:0.8,x:40,opacity:0,delay:0.3});
+  gsap.from('.btn',{duration:0.8,scale:0.8,opacity:0,delay:0.4});
+  gsap.from('.forgot',{duration:0.8,opacity:0,delay:0.6});
 });
 
-/* التنقل بين الشاشتين */
-document.getElementById('goForgot').addEventListener('click',()=>{
-  gsap.to(loginScreen,{duration:0.6,x:-window.innerWidth,ease:"power3.inOut"});
-  gsap.to(forgotScreen,{duration:0.6,x:-window.innerWidth,ease:"power3.inOut"});
-});
-document.getElementById('backLogin').addEventListener('click',()=>{
-  gsap.to(loginScreen,{duration:0.6,x:0,ease:"power3.inOut"});
-  gsap.to(forgotScreen,{duration:0.6,x:window.innerWidth,ease:"power3.inOut"});
-});
-
-/* تسجيل الدخول */
 document.getElementById('loginBtn').addEventListener('click',()=>{
   const code=document.getElementById('studentCode').value.trim();
   if(!code){alert('يرجى إدخال الكود');return;}
   alert('تم تسجيل الدخول بنجاح ✅');
 });
-
-/* استرجاع الكود */
-const sheetURL="https://docs.google.com/spreadsheets/d/e/2PACX-1vReghaYoMk3f8ffSBLRHIwZieEWCfk5Yx8W6c843TXkC6wpA78Z0X5nw21RRpxMdQ/pub?gid=1229272896&single=true&output=csv";
-const resultArea=document.getElementById('resultArea');
-const parentInput=document.getElementById('parent');
-const nameInput=document.getElementById('studentName');
-
-function parseCSV(text){const rows=[];let cur='',row=[],inQuotes=false;for(let i=0;i<text.length;i++){const ch=text[i],next=text[i+1];if(ch=='"'){if(inQuotes&&next=='"'){cur+='"';i++;continue;}inQuotes=!inQuotes;continue;}if(ch=='\r')continue;if(ch==','&&!inQuotes){row.push(cur);cur='';continue;}if(ch=='\n'&&!inQuotes){row.push(cur);rows.push(row);row=[];cur='';continue;}cur+=ch;}if(cur!=''||row.length>0){row.push(cur);rows.push(row);}return rows;}
-function normalizeKey(k){return (k||'').toString().trim();}
-async function fetchSheetObjects(){const resp=await fetch(sheetURL);if(!resp.ok)throw new Error("فشل جلب البيانات");const text=await resp.text();const rows=parseCSV(text).filter(r=>r.some(c=>c.trim()!=''));if(rows.length===0)return{header:[],rows:[]};const header=rows[0].map(h=>normalizeKey(h));const dataRows=rows.slice(1);const objects=dataRows.map(r=>{const obj={};for(let i=0;i<header.length;i++){obj[header[i]]=(r[i]||'').toString().trim();}return obj;});return{header,rows:objects};}
-function cleanNumber(n){if(!n)return'';n=n.toString().trim();if(n.startsWith('0'))n=n.replace(/^0+/,'');return n;}
-function showError(msg){resultArea.innerHTML=`<div class="card err">${msg}</div>`;}
-function showMessageHTML(html){resultArea.innerHTML=html;}
-function revealCodeAnim(codeStr){
-  const html=`<div class="card">
-  <h3>الكود الخاص بالطالب هو:</h3>
-  <div class="codeBox" id="codeBox"></div>
-  <div><button class="copyBtn" id="copyBtn">نسخ الكود</button></div>
-  </div>`;
-  showMessageHTML(html);
-  const box=document.getElementById('codeBox');box.innerHTML='';
-  const chars=Array.from(codeStr);
-  chars.forEach((ch,idx)=>{
-    const span=document.createElement('span');span.textContent=ch;span.className='chars';box.appendChild(span);
-    setTimeout(()=>span.classList.add('visible'),120*idx);
-  });
-  setTimeout(()=>{
-    const btn=document.getElementById('copyBtn');
-    btn.addEventListener('click',async()=>{
-      try{await navigator.clipboard.writeText(codeStr);btn.textContent='تم النسخ ✓';btn.classList.add('success');
-        setTimeout(()=>{btn.textContent='نسخ الكود';btn.classList.remove('success');},2000);
-      }catch(e){btn.textContent='نسخ (غير مدعوم)';btn.classList.add('fail');}
-    });
-  },120*chars.length+80);
-}
-document.getElementById('searchBtn').addEventListener('click',async()=>{
-  const parent=cleanNumber(parentInput.value);
-  const name=(nameInput.value||'').toString().trim().toLowerCase();
-  if(!parent||!name){showError('الرجاء إدخال اسم الطالب ورقم ولي الأمر');return;}
-  showMessageHTML(`<div style="color:#666">⏳ جاري البحث...</div>`);
-  try{
-    const {header,rows}=await fetchSheetObjects();
-    const found=rows.find(r=>{
-      const p=cleanNumber(r['رقم ولي الامر']||r['رقم ولي الأمر']||r['وليامر']||r['parent']||'');
-      const studentName=(r['اسم الطالب']||r['اسم']||r['Name']||'').toString().trim().toLowerCase();
-      return p===parent && studentName===name;
-    });
-    if(!found){showError('❌ البيانات خاطئة — حاول أن تتذكر أو تراجع قسم الحوكمة');return;}
-    const code=found['كود الطالب']||found['كود']||found['id']||found['ID']||'';
-    if(!code){showError('لم يتم العثور على كود في السجل — تواصل مع قسم الحوكمة');return;}
-    revealCodeAnim(code);
-  }catch(err){console.error(err);showError('حدث خطأ أثناء الوصول إلى الملف. تأكد من اتصال الإنترنت وحاول مرة أخرى.');}
-});
-document.getElementById('clearBtn').addEventListener('click',()=>{parentInput.value='';nameInput.value='';resultArea.innerHTML='<div style="text-align:center;color:#666">النتيجة ستظهر هنا بعد البحث</div>';});
 </script>
 </body>
 </html>
